# pocketbase-client

./: Cargo.toml  README.md
examples/: collections.rs  healthcheck.rs  logs.rs  records.rs
src/: admin.rs  client.rs  collections.rs  error.rs  httpc.rs  lib.rs  logs.rs  records.rs
tests/: authenticate_admin.rs  authenticate_record.rs  collections.rs  records.rs
