[package]
name        = "pocketbase-client"
version     = "0.1.0"
edition     = "2021"
authors     = ["Gavin Stringfellow <StringfellowGavin@gmail.com>"]
license     = "MIT"
description = "Pocketbase Client"
readme      = "README.md"
homepage    = "https://github.com/Tootallgavin/pocketbase-client"
categories = ["network-programming", "web-programming::http-client", "web-programming::http-server"]
keywords    = [
  "pocketbase",
  "pocketbase-client",
  "pocketbase-sdk",
  "rust-pocketbase",
  "pocketbase-rs"
]

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"], optional = true }
serde_path_to_error = "0.1"
[dev-dependencies]
httpmock = "0.7.0"

[features]
default = []
bin = ["tokio"]
